Bug 93798 - apitrace and glerrors ...
Summary: apitrace and glerrors ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.2
Keywords:
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2015-08-31 10:05 UTC by Michael Meeks
Modified: 2016-10-25 19:24 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Meeks 2015-08-31 10:05:00 UTC
Sometimes when chasing issues under apitrace I get stuck in the loop in checkGLError - I guess that (somehow) bad is happening. Nevertheless - it seems unlikely to me that we really need an infinite loop here - so chop it down to 8x errors per call: we call it rather regularly so ... we should bail out here if we can.
Comment 1 Commit Notification 2015-08-31 10:11:13 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=884bea629dc61d73ae1f0af6d55ee37df035c8de

tdf#93798 - avoid apitrace provoked infinite loop dumping errors.

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2015-08-31 10:56:04 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=11fc36a480e4b775fc1b3fbe70b816a860379f9a&h=libreoffice-5-0

tdf#93798 - avoid apitrace provoked infinite loop dumping errors.

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.