tdf#93798 - avoid apitrace provoked infinite loop dumping errors.

Change-Id: I6c42e6a9ead90ed6fad2f289cd686a72cffa0c2d